@startuml
title 面向马来西亚留学生的汉语练习平台练习资源模块数据关系图
skinparam defaultFontName "Noto Sans CJK SC"
skinparam shadowing false
skinparam backgroundColor white
skinparam ArrowColor #3C5488
skinparam ActorBorderColor #3C5488
skinparam ActorFontColor #111827
skinparam UsecaseBorderColor #0072B2
skinparam UsecaseBackgroundColor #F8FBFF
skinparam ComponentBorderColor #0072B2
skinparam ComponentBackgroundColor #F8FBFF
skinparam DatabaseBorderColor #009E73
skinparam DatabaseBackgroundColor #F4FFF9
skinparam SequenceLifeLineBorderColor #3C5488
skinparam ParticipantBorderColor #0072B2
skinparam ParticipantBackgroundColor #F8FBFF
skinparam ActivityBorderColor #0072B2
skinparam ActivityBackgroundColor #F8FBFF

class "练习资源模块请求参数" as Req {
  +userId
  +query
  +payload
}
class "练习资源模块响应结果" as Res {
  +code
  +message
  +data
}
class "levels" as D0 {
  +id
  +业务字段
  +时间字段
}
class "question_categories" as D1 {
  +id
  +业务字段
  +时间字段
}
class "papers" as D2 {
  +id
  +业务字段
  +时间字段
}
class "questions" as D3 {
  +id
  +业务字段
  +时间字段
}
Req --> D0 : /api/learning/*
Req --> D1 : /api/learning/*
Req --> D2 : /api/learning/*
Req --> D3 : /api/learning/*
D0 --> D1 : 等级、分类、试卷列表和试卷详情查询
D1 --> D2 : 等级、分类、试卷列表和试卷详情查询
D2 --> D3 : 等级、分类、试卷列表和试卷详情查询
D0 --> Res : 组装返回
@enduml